[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui_modules/CharacterInfo/SlaveInfoModule.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveBodyModule.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveSummaryModule.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui_modules/CharacterInfo/CharInfoMainModule.gd" type="Script" id=4]
[ext_resource path="res://assets/Themes_v2/MANSION/CharInfoMainPanel.tres" type="StyleBox" id=5]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveClassesModule.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveDetailsModule.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveDietModule.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/HintTooltip.tres" type="Theme" id=9]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=10]

[node name="CharInfoMainModule" type="Panel" groups=[
"pauseprocess",
]]
light_mask = 0
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 9 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlaveSummaryModule" parent="." instance=ExtResource( 3 )]
margin_left = 15.0
margin_top = 15.0
margin_right = 235.0
margin_bottom = 1065.0

[node name="SlaveBodyModule" parent="." instance=ExtResource( 2 )]
show_behind_parent = false
margin_left = 1205.0
margin_top = 145.0
margin_right = 1905.0
margin_bottom = 1065.0

[node name="SlaveInfoModule" parent="." instance=ExtResource( 1 )]
margin_left = 235.0
margin_top = 145.0
margin_right = 1205.0
margin_bottom = 1065.0

[node name="SlaveClassesModule" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 235.0
margin_top = 145.0
margin_right = 1205.0
margin_bottom = 1065.0

[node name="SlaveDetailsModule" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 235.0
margin_top = 145.0
margin_right = 1205.0
margin_bottom = 1065.0

[node name="SlaveDietModule" parent="." instance=ExtResource( 8 )]
visible = false
light_mask = 0
margin_left = 535.0
margin_top = 365.0
margin_right = 1205.0
margin_bottom = 1065.0

[node name="Button" type="Button" parent="."]
visible = false
light_mask = 0
margin_left = 1466.0
margin_top = 56.0
margin_right = 1535.0
margin_bottom = 86.0
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkButton" type="Button" parent="."]
margin_left = 1453.95
margin_top = 42.7631
margin_right = 1677.95
margin_bottom = 120.763
theme = ExtResource( 10 )
text = "Talk"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
